<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SummerCloset">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="414dp"
            android:layout_height="54dp"
            android:background="#A797D1"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/ibArrow"
            android:layout_width="54dp"
            android:layout_height="56dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/arrow" />

        <Button
            android:id="@+id/btnUnderwear"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/underwear_button"
            android:textSize="17dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.852" />

        <Button
            android:id="@+id/btnJackets"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/jacket_button"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.268" />

        <Button
            android:id="@+id/btnShoes"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/shoes_button"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <Button
            android:id="@+id/btnSkirtPants"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/skirt_pants_button"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.113"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.561" />

        <Button
            android:id="@+id/btnSweaters"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/sweaters_button"
            android:textSize="20dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.268" />

        <Button
            android:id="@+id/btnComplements"
            android:layout_width="155dp"
            android:layout_height="136dp"
            android:text="@string/complements_button"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/material_dynamic_neutral70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.898"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.852" />

        <TextView
            android:id="@+id/tvTituloSummer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_closet_summer"
            android:textSize="40dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.126" />


</androidx.constraintlayout.widget.ConstraintLayout>
